--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,144 @@
-anyio==4.6.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-async-lru==2.0.4
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+alembic==1.14.0
+anyio==4.6.2.post1
+apache-airflow==2.10.3
+apache-airflow-providers-common-compat==1.2.1
+apache-airflow-providers-common-io==1.4.2
+apache-airflow-providers-common-sql==1.19.0
+apache-airflow-providers-fab==1.5.0
+apache-airflow-providers-ftp==3.11.1
+apache-airflow-providers-http==4.13.2
+apache-airflow-providers-imap==3.7.0
+apache-airflow-providers-smtp==1.8.0
+apache-airflow-providers-sqlite==3.9.0
+apispec==6.7.1
+argcomplete==3.5.1
+asgiref==3.8.1
+async-timeout==4.0.3
 attrs==24.2.0
 babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
+blinker==1.8.2
+cachelib==0.9.0
 certifi==2024.8.30
 cffi==1.17.1
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
+click==8.1.7
+clickclick==20.10.2
 colorama==0.4.6
-comm==0.2.2
-debugpy==1.8.5
-decorator==5.1.1
-defusedxml==0.7.1
-executing==2.1.0
-fastjsonschema==2.20.0
-fqdn==1.5.1
+colorlog==6.9.0
+ConfigUpdater==3.2
+connexion==2.14.2
+cron-descriptor==1.4.5
+croniter==5.0.1
+cryptography==42.0.8
+DateTime==5.5
+Deprecated==1.2.14
+dill==0.3.1.1
+dnspython==2.7.0
+email_validator==2.2.0
+exceptiongroup==1.2.2
+Flask==2.2.5
+Flask-AppBuilder==4.5.2
+Flask-Babel==2.0.0
+Flask-Caching==2.3.0
+Flask-JWT-Extended==4.6.0
+Flask-Limiter==3.8.0
+Flask-Login==0.6.3
+Flask-Session==0.5.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.2.2
+frozenlist==1.5.0
+fsspec==2024.10.0
+google-re2==1.1.20240702
+googleapis-common-protos==1.65.0
+grpcio==1.65.5
+gunicorn==23.0.0
 h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.2
+httpcore==1.0.6
+httpx==0.27.0
 idna==3.10
-ipykernel==6.29.5
-ipython==8.27.0
-isoduration==20.11.0
-jedi==0.19.1
+importlib-metadata==6.11.0
+importlib_resources==6.4.5
+inflection==0.5.1
+itsdangerous==2.2.0
 Jinja2==3.1.4
-json5==0.9.25
-jsonpointer==3.0.0
+jmespath==0.10.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-MarkupSafe==2.1.5
-matplotlib-inline==0.1.7
-mistune==3.0.2
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook==7.2.2
-notebook_shim==0.2.4
-numpy==2.1.1
-overrides==7.7.0
+lazy-object-proxy==1.10.0
+limits==3.13.0
+linkify-it-py==2.0.3
+lockfile==0.12.2
+Mako==1.3.6
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.23.1
+marshmallow-oneofschema==3.1.1
+marshmallow-sqlalchemy==0.28.2
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+methodtools==0.4.7
+more-itertools==10.5.0
+multidict==6.1.0
+numpy==2.0.2
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-exporter-otlp-proto-http==1.27.0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+ordered-set==4.1.0
 packaging==24.1
 pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-platformdirs==4.3.6
-prometheus_client==0.21.0
-prompt_toolkit==3.0.47
-psutil==6.0.0
-pure_eval==0.2.3
+pathspec==0.12.1
+pendulum==3.0.0
+pluggy==1.5.0
+prison==0.2.1
+propcache==0.2.0
+protobuf==4.25.5
+psutil==6.1.0
+psycopg2==2.9.10
 pycparser==2.22
 Pygments==2.18.0
+PyJWT==2.9.0
+python-daemon==3.1.0
 python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
+python-nvd3==0.16.0
+python-slugify==8.0.4
 pytz==2024.2
-pywin32==306
-pywinpty==2.0.13
 PyYAML==6.0.2
-pyzmq==26.2.0
 referencing==0.35.1
 requests==2.32.3
+requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.20.0
-Send2Trash==1.8.3
+rich==13.9.4
+rich-argparse==1.6.0
+rpds-py==0.20.1
+setproctitle==1.3.3
 six==1.16.0
 sniffio==1.3.1
-soupsieve==2.6
-stack-data==0.6.3
-terminado==0.18.1
-tinycss2==1.3.0
-tornado==6.4.1
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20240906
+SQLAlchemy==1.4.54
+SQLAlchemy-JSONField==1.0.2
+SQLAlchemy-Utils==0.41.2
+sqlparse==0.5.1
+tabulate==0.9.0
+tenacity==8.5.0
+termcolor==2.5.0
+text-unidecode==1.3
+time-machine==2.16.0
 typing_extensions==4.12.2
-tzdata==2024.1
-uri-template==1.3.0
-urllib3==2.2.3
-wcwidth==0.2.13
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
+tzdata==2024.2
+uc-micro-py==1.0.3
+universal_pathlib==0.2.5
+urllib3==1.26.20
+Werkzeug==2.2.3
+wirerope==0.4.7
+wrapt==1.16.0
+WTForms==3.2.1
+yarl==1.17.1
+zipp==3.20.2
+zope.interface==7.1.1
